[metadata]
name = libdenavit
version = 0.2.1
; Following metadata is optional.
author = Mark Denavit
author_email = mdenavit@utk.edu
description = A Python library for structural engineering research.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denavit/libdenavit-py
license = MIT

[options]
; Need to tell setuptools where to find the packages, since they're tucked
; inside the `src` directory.
package_dir =
    =src
packages = find:

; Specifying minimum Python version and dependencies is optional, but helpful.
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    openseespy
    pandas
    Pint
    scipy
    shapely
    ; Put any dependencies here

[options.packages.find]
where = src
